# modest.bot

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: main.yml
src/: commands.rs  handler.rs  main.rs  shard.rs
src/commands/: help.rs  kill.rs  mod.rs  ping.rs
src/commands/admin/: kill.rs  ping.rs  sql.rs
src/discord/: connection.rs  handler.rs  mod.rs
src/discord/commands/: admin.rs  help.rs
src/discord/commands/admin/: kill.rs  ping.rs  sql.rs
src/graphql/: schema.rs  server.rs
src/postgres/: connection.rs  delete.rs  get.rs  mod.rs  store.rs
src/twitch/: automod.rs
src/utils/: mention.rs  mod.rs
