[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Timothy Cole <tim@timcole.me>"]
edition = "2018"

[dependencies]
serenity = "0.9.0-rc.2"
tokio = { version = "0.2.21", features = ["macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
reqwest = "0.10.6"
pretty_env_logger = "0.4"
log = "0.4"
postgres = "0.17.4"
tokio-postgres = "0.5.5"
postgres_array = "0.10.0"
bb8 = "0.4.2"
bb8-postgres = "0.4.0"
regex = "1.3.9"
warp = "0.2.0"
async-graphql = "1.16"
async-graphql-warp = "1.14.9"
