[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Timothy Cole <tim@timcole.me>"]
edition = "2018"

[dependencies]
serenity = "0.10"
tokio = { version = "1.15.0", features = ["macros", "time", "rt-multi-thread"] }
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
dotenv = "0.15.0"
reqwest = "0.11.9"
pretty_env_logger = "0.4.0"
log = "0.4.14"
postgres = "0.19.2"
tokio-postgres = "0.7.5"
postgres_array = "0.11.0"
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
regex = "1.5.4"
chrono = "0.4.19"
